fix: mtml view layering and alignment
fixes #1096

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,7 @@
   margin-bottom: 6px !important;
 }
 #new-layout .leaflet-bottom.leaflet-left {
-  z-index: 1050 !important;
+  z-index: 1070 !important;
 }
 #new-layout .leaflet-bottom.leaflet-left > .leaflet-control {
   margin-bottom: 20px !important;
